@@ -5,6 +5,6 @@ struct A
   struct
   {
     struct { static int i; }; // { dg-error "prohibits anonymous structs|non-static data members|unnamed class" }
-    void foo() { i; } // { dg-error "can only have non-static data" }
+    void foo() { i; } // { dg-error "public non-static data" }
   }; // { dg-error "prohibits anonymous structs" }
 };
