@@ -3,7 +3,7 @@
 
 struct X {
   union {
-    class a; // { dg-warning "can only have" }
+    class a; // { dg-warning "public non-static data member" }
   };
   a *b;
 };
@@ -11,7 +11,7 @@ X::a *a;
 
 struct Y {
   union {
-    class a; // { dg-warning "can only have" }
+    class a; // { dg-warning "public non-static data member" }
     int a;
   };
   class a *b;
@@ -23,7 +23,7 @@ struct Z {
   union {
     // Force MEMBER_VEC creation
     int a1, a2, a3, a4, a5, a6, a7, a8, a9, a10;
-    class a; // { dg-warning "can only have" }
+    class a; // { dg-warning "public non-static data member" }
     int a;
   };
   class a *b;
