@@ -1,3 +1,8 @@
+2018-03-21  Nathan Sidwell  <nathan@acm.org>
+
+	* doc/extend.texi (Deprecated Features): Update deprecared flags,
+	mention anon-struct/union members and trailing attributes.
+
 2018-03-21  Bin Cheng  <bin.cheng@arm.com>
 
 	PR tree-optimization/84969
